--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ futures_api = []
 margin_api = []
 savings_api = []
 wallet_api = []
-subaccount_api = []
-all_apis = ["futures_api", "margin_api", "savings_api", "wallet_api", "subaccount_api"]
+sub_management_api = []
+all_apis = ["futures_api", "margin_api", "savings_api", "wallet_api", "sub_management_api"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
